--- a/src/app.css
+++ b/src/app.css
@@ -8,6 +8,111 @@
 .main {
     width: 75%;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230), url("./assests/BG image.png") center;
+    display: flex;
+    flex-direction: column;
+}
+
+.top {
+    height: 50%;
+    position: relative;
+}
+
+.timer {
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    border: 5px solid white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    bottom: 10px;
+    left: 80px;
+}
+
+.bottom {
+    height: 50%;
+}
+
+.quiz {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.question {
+    width: 80%;
+    background: linear-gradient(#100241, black);
+    border: 2px solid white;
+    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 20px;
+}
+
+.answer {
+    width: 40%;
+    padding: 10px;
+    text-align: center;
+    background: linear-gradient(#0e0124, #22074d);
+    border: 1px solid white;
+    border-radius: 15px;
+    font-style: 20px;
+    font-weight: 300;
+    margin: 0 10px 20px 10px;
+    cursor: pointer;
+}
+
+.answers {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.answer:hover,
+.answer.active {
+    background: mediumblue;
+}
+
+.answer.correct {
+    animation: correct 3s ease forwards;
+}
+
+@keyframes correct {
+    0%,
+    22% {
+        background: mediumblue;
+    }
+    20% {
+        background: linear-gradient(#0e0124, #22074d);
+    }
+    26%,
+    100% {
+        background: green;
+    }
+}
+
+.answer.wrong {
+    animation: wrong 3s ease forwards;
+}
+
+@keyframes wrong {
+    0%,
+    22% {
+        background: mediumblue;
+    }
+    20% {
+        background: linear-gradient(#0e0124, #22074d);
+    }
+    26%,
+    100% {
+        background: crimson;
+    }
 }
 
 .pyramid {
@@ -19,4 +124,26 @@
 
 .pointList {
     list-style: none;
+}
+
+.pointListItem {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.pointListItem.active {
+    background-color: teal;
+}
+
+.pointListItemNumber {
+    font-size: 18px;
+    font-weight: 100;
+    width: 30%;
+}
+
+.pointListItemPoints {
+    font-size: 20px;
+    width: 10%;
 }
