feat: game over functionality

--- a/src/app.css
+++ b/src/app.css
@@ -147,3 +147,12 @@
     font-size: 20px;
     width: 10%;
 }
+
+.endGame {
+    position: relative;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
