--- a/src/app.css
+++ b/src/app.css
@@ -124,6 +124,8 @@
 
 .pointList {
     list-style: none;
+    width: 100%;
+    padding: 20px;
 }
 
 .pointListItem {
@@ -145,10 +147,45 @@
 
 .pointListItemPoints {
     font-size: 20px;
-    width: 10%;
+    font-weight: 300;
+}
+
+.start {
+    width: 350px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.startButton {
+    cursor: pointer;
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
 }
 
 .endGame {
+    position: relative;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+
+.EndImage {
+    width: 40%;
+    height: 40%;
     position: relative;
     top: 0;
     right: 0;
