--- a/src/app.css
+++ b/src/app.css
@@ -7,13 +7,14 @@
 
 .main {
     width: 75%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230), url("./assests/BG image.png") center;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230), url("./assests/BG\ image.jpg") center;
     display: flex;
     flex-direction: column;
+    background-size: cover;
 }
 
 .top {
-    height: 50%;
+    height: 30%;
     position: relative;
 }
 
@@ -33,11 +34,32 @@
 }
 
 .bottom {
-    height: 50%;
+    height: 70%;
+}
+
+.quizBody {
+    height: 100%;
+
+}
+
+.questionImage {
+    height: 40%;
+    position: relative;
+}
+
+.qusImage {
+    position: absolute;
+    width: 50%;
+    height: 90%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
 }
 
 .quiz {
-    height: 100%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -151,7 +173,7 @@
 }
 
 .start {
-    width: 350px;
+    width: 400px;
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -172,6 +194,7 @@
     border: none;
     border-radius: 5px;
     font-size: 18px;
+    margin-top: 10px;
 }
 
 .endGame {
