--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,8 @@
+* {
+    font-family: 'Zen Antique', serif;
+    margin: 0;
+}
+
 .App {
     height: 100vh;
     display: flex;
@@ -39,7 +44,6 @@
 
 .quizBody {
     height: 100%;
-
 }
 
 .questionImage {
